--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <title>Mission 7</title>
+    <title>Clipboard</title>
   </head>
   <body class="font-Bai">
     <header class="absolute w-full">
